Partial_14Dec2021/force-app/main/default/objects/Bank_Details__c/Bank_Details__c.object-meta.xml
<CustomObject>
    <label>Bank Detail</label>
    <nameField>
        <displayFormat>BD-{000}</displayFormat>
        <label>Bank Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>