Partial_14Dec2021/force-app/main/default/objects/Bank_Details__c/fields/Date_on_Which_this_Account_was_Opened__c.field-meta.xml
<CustomField>
    <fullName>Date_on_Which_this_Account_was_Opened__c</fullName>
    <label>Date on Which this Account was Opened</label>
    <type>Date</type>
</CustomField>