Partial_14Dec2021/force-app/main/default/objects/Bank_Details__c/fields/Full_Address_of_the_Bank_with_Pin_Code__c.field-meta.xml
<CustomField>
    <fullName>Full_Address_of_the_Bank_with_Pin_Code__c</fullName>
    <label>Full Address of the Bank with Pin Code</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>