Partial_14Dec2021/force-app/main/default/objects/Bank_Details__c/fields/LandLine__c.field-meta.xml
<CustomField>
    <fullName>LandLine__c</fullName>
    <label>LandLine</label>
    <type>Phone</type>
</CustomField>