Partial_14Dec2021/force-app/main/default/objects/Bank_Details__c/fields/Name_of_your_Bank__c.field-meta.xml
<CustomField>
    <fullName>Name_of_your_Bank__c</fullName>
    <label>Name of Your Bank</label>
    <length>100</length>
    <type>Text</type>
</CustomField>