Partial_14Dec2021/force-app/main/default/objects/Bank_Details__c/fields/Security_Provided__c.field-meta.xml
<CustomField>
    <fullName>Security_Provided__c</fullName>
    <label>Security Provided</label>
    <type>TextArea</type>
</CustomField>