Partial_14Dec2021/force-app/main/default/objects/Bank_Details__c/fields/Type_of_Loan__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Loan__c</fullName>
    <label>Type of Loan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CC/Overdraft Letter of Credit</fullName>
            </value>
            <value>
                <fullName>Bank Guarantee</fullName>
            </value>
            <value>
                <fullName>Term Loan</fullName>
            </value>
            <value>
                <fullName>Letter of Credit</fullName>
                <isActive>false</isActive>
                <label>Letter of Credit</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>