Partial_14Dec2021/force-app/main/default/objects/Bank_Details__c/recordTypes/Financial_Details.recordType-meta.xml
<RecordType>
    <fullName>Financial_Details</fullName>
    <active>true</active>
    <label>Financial Details</label>
</RecordType>