Partial_14Dec2021/force-app/main/default/objects/Bank_Details__c/recordTypes/Loan_Details.recordType-meta.xml
<RecordType>
    <fullName>Loan_Details</fullName>
    <active>true</active>
    <label>Loan Details</label>
</RecordType>